src/tests/errors/break_outside_loop/source.z42
namespace Demo;

void Main() {
    break;
}
